--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Êý¾Ý¿â
-spring.datasource.url=jdbc:mysql://localhost:3306/dong?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia
+spring.datasource.url=jdbc:mysql://localhost:3306/dong?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
