--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=123456
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
 
-#mybatis.mapper-locations=classpath*:/mappers/*.xml
+mybatis.mapper-locations=classpath*:/mappers/*.xml
