--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-#Êý¾Ý¿â
-spring.datasource.url=jdbc:mysql://localhost:3306/dong?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#\u6570\u636E\u5E93
+spring.datasource.url=jdbc:mysql://localhost:3306/epgclient87?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.password=dsj132435
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
+#mapper\u6620\u5C04\u6587\u4EF6\u8DEF\u5F84
 mybatis.mapper-locations=classpath*:/mappers/*.xml
+
+#\u65E5\u5FD7
+#logging.file.path=f:\
+logging.file.name=f:\\springbootdemo.log
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n 
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
